--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </div>
         <div class="card-front">
           <img src="/images/bg-card-front.png" alt="" />
-          <div class="card details">
+          <div class="card-details">
             <img src="/images/card-logo.svg" alt="" />
-            <span class="card-number">959164896389101E</span>
+            <span class="card-number">9591 6489 6389 101E</span>
             <div class="info">
               <span class="cardholder-name">Frankline</span>
-              <span class="exp date">09/00</span>
+              <span class="exp-date">09/00</span>
             </div>
           </div>
         </div>
