--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="/images/bg-card-front.png" alt="" />
           <div class="card-details">
             <img src="/images/card-logo.svg" alt="" />
-            <span class="card-number">959E 648E 638E 101E</span>
+            <span class="card-number">9597 6488 6384 1019</span>
             <div class="info">
               <span class="cardholder-name">Frankline</span>
               <span class="exp-date">09/00</span>
